page navigation & page anchor

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ body {
   grid-template-rows: [header] auto [section] 1fr [footer] auto;
   min-height: 100vh;
   background-color: var(--bg-container-color);
-  grid-row-gap: 1em;
+  grid-row-gap: .5em;
   box-sizing: border-box;
 }
 .article-view,
@@ -35,8 +35,10 @@ body {
   grid-column: section;
   grid-row: section;
 }
-.main-container{
-  overflow: hidden;
+a[name]{
+  padding-top: 200px;
+  margin-top: -200px;
+  display: inline-block; /* required for webkit browsers */
 }
 /*-------------------------------------
                    header
@@ -76,18 +78,18 @@ body {
   margin: 0 auto 0.5em;
 }
 .menu:first-child,
-.right a:first-child,
 .middle > a {
   margin-right: 1em;
 }
 .menu:last-child,
-.right a:last-child {
+.right > a:last-child {
   margin-left: 1em;
 }
 
 .middle > a,
 .menu,
-.right a {
+.right .login,
+.theme a {
   padding: 0.8em;
   background: linear-gradient(
     var(--gradian-color-3),
@@ -102,7 +104,8 @@ body {
 }
 .middle > a:hover,
 .menu:hover,
-.right a:hover {
+.right .login:hover,
+.theme a:hover {
   background: linear-gradient(
     var(--gradian-color-1),
     var(--gradian-color-3),
@@ -161,6 +164,7 @@ transform: scale(1, 0);
 }
 .theme a {
   padding: 2px;
+  margin-right: 1em;
 }
 .theme img {
   width: 100%;
@@ -299,6 +303,7 @@ transform: scale(1, 0);
   padding: 0 0.5em;
   line-height: 1.7rem;
   font-size: 0.8rem;
+  
 }
 .btn-options:hover {
   background: var(--bg-container-color);
@@ -310,7 +315,8 @@ transform: scale(1, 0);
   /* border-radius:  0 15px 0 0 / 0 50% 0 0; */
 }
 .btn-options:hover .search-options {
-  display: block;
+  transform: scale(1,1);
+  transition-delay: 100ms;
 }
 /* .btn-options span{
   
@@ -320,14 +326,15 @@ transform: scale(1, 0);
   position: absolute;
   top: 100%;
   right: 0;
-  
-  display: none;
   font-size: 0.7rem;
   color: var(--text-color);
   background: var(--bg-clr-1);
   border: thin solid var(--text-color);
   padding-right: .5em;
   z-index: 100;
+  transform: scale(1, 0);
+  transform-origin: top center;
+  transition: all 200ms ease-in 300ms;
 }
 .search-options .radio {
   display: flex;
@@ -466,15 +473,7 @@ transform: scale(1, 0);
             home header
 ------------------------------------*/
 
-.middle > a:hover,
-.menu:hover,
-.right a:hover {
-  background: linear-gradient(
-    var(--gradian-color-1),
-    var(--gradian-color-3),
-    var(--gradian-color-1)
-  );
-}
+
 .home-header{
   display: flex;
   justify-content: space-around;
@@ -625,11 +624,15 @@ right: .2em;
   justify-content: center;
 }
 .pages-ellepsis{
-  overflow: hidden;
+  /* overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis; */
+  height: 2.5em;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: space-between;
 }
-
 .pages a {
   text-decoration: none;
   color: var(--text-color);
@@ -865,7 +868,7 @@ img.loading {
   border-radius: 5px;
   box-shadow: 0 0 3px 3px var(--gradian-color-4) inset;
 }
-form.login {
+form.local-login {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -876,7 +879,7 @@ form.login {
   box-shadow: 0 5px 2px 5px var(--gradian-color-4);
   margin: 1em 0;
 }
-form.login input {
+form.local-login input {
   box-sizing: border-box;
   height: 3em;
   margin: 1em;
@@ -901,6 +904,11 @@ form.login input {
 --------------------------------------*/
 
 @media (max-width: 600px) {
+  a[name]{
+    padding-top: 0;
+    margin-top: 0;
+    /* display: inline-block; required for webkit browsers */
+  }
   .container {
     grid-template-columns: [section] 1fr;
     grid-template-rows: [header] auto [aside] auto [section] 1fr [footer] auto;
