--- a/views/layout/movieByQuery-layout/section-header.pug
+++ b/views/layout/movieByQuery-layout/section-header.pug
@@ -1,5 +1,6 @@
 mixin section-header(title)     
   .section-header 
+    a(name="sect-hd")
     if !index
       h1= title && title
     //- if index && title == "Movies"
