--- a/views/profile.pug
+++ b/views/profile.pug
@@ -2,6 +2,11 @@ extends ./layout/general-layout/layout.pug
 block container
   main.main-container
     a(name="sect-hd")
-    if username
-      h1= 'Welcome '+ username
-      a(href="/logout" ) Logout
+    .form-container
+      figure.movie-info-poster
+        img(src=userPhoto)
+      form
+        h1 Welcome 
+        p= username
+        a.btn-social-login(href="/logout" ) Logout
+        a.btn-social-login(href="/accountDelete" ) Delete Account
