--- a/views/login.pug
+++ b/views/login.pug
@@ -5,7 +5,7 @@ block container
     .form-container
       .social-login
         a.btn-social-login(href="/auth/github") #[img(src="/static/images/github.png" width="40px")] Login with github
-        a.btn-social-login(href="/auth/twitter") #[img(src="/static/images/twitter.png" width="40px")] Login with twiter
+        a.btn-social-login(href="/auth/twitter") #[img(src="/static/images/twitter.png" width="40px")] Login with twitter
         a.btn-social-login(href="/auth/google") #[img(src="/static/images/google.png" width="40px")] Login with google
       form.local-login(action="/login", method="post")
         h1 Login
