--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ body {
   grid-template-rows: [header] auto [section] 1fr [footer] auto;
   min-height: 100vh;
   background-color: var(--bg-container-color);
-  grid-row-gap: .5em;
+  grid-row-gap: 0.5em;
   box-sizing: border-box;
 }
 .article-view,
@@ -36,7 +36,7 @@ body {
   grid-column: section;
   grid-row: section;
 }
-a[name]{
+a[name] {
   padding-top: 200px;
   margin-top: -200px;
   display: inline-block; /* required for webkit browsers */
@@ -129,9 +129,9 @@ a[name]{
   position: absolute;
   top: 100%;
   background: #e0e0e0;
-  background: var(--bg-clr-1);  
+  background: var(--bg-clr-1);
   transform-origin: top center;
-transform: scale(1, 0);
+  transform: scale(1, 0);
   transition: all 200ms ease-in 300ms;
   margin: 0;
   padding: 0;
@@ -160,7 +160,7 @@ transform: scale(1, 0);
   text-decoration: none;
 }
 .menu li a:hover {
-  background:#191919;
+  background: #191919;
   color: #e0e0e0;
   background: var(--text-color-2);
   color: var(--bg-clr-1);
@@ -169,9 +169,10 @@ transform: scale(1, 0);
   display: inlinblock;
   vertical-align: middle;
 } */
-.theme  {
+.theme {
   padding: 2px;
   margin-right: 1em;
+  width: 2em;
 }
 .theme img {
   width: 100%;
@@ -244,7 +245,6 @@ transform: scale(1, 0);
   left: 0;
   width: 100%;
   border-radius: 50%;
-  
 }
 
 /*****  search bar ********/
@@ -260,7 +260,7 @@ transform: scale(1, 0);
     var(--gradian-color-3),
     var(--gradian-color-1),
     var(--gradian-color-3)
-  ); 
+  );
   color: #808080;
   color: var(--text-color);
 }
@@ -295,18 +295,21 @@ transform: scale(1, 0);
   padding: 0 0.5em;
   line-height: 1.7rem;
   font-size: 0.8rem;
-  
 }
 .btn-options:hover {
   background: #e0e0e0;
   background: var(--bg-clr-1);
-  background: linear-gradient(var(--gradian-color-1), var(--gradian-color-2), var(--gradian-color-1));
-  
+  background: linear-gradient(
+    var(--gradian-color-1),
+    var(--gradian-color-2),
+    var(--gradian-color-1)
+  );
+
   /* border-radius:  0 15px 0 0 / 0 50% 0 0; */
 }
 .btn-options:hover .search-options {
   visibility: visible;
-  transform: scale(1,1);
+  transform: scale(1, 1);
   transition-delay: 100ms;
 }
 /* .btn-options span{
@@ -322,7 +325,7 @@ transform: scale(1, 0);
   background: #e0e0e0;
   background: var(--bg-clr-1);
   border: thin solid var(--text-color);
-  padding-right: .5em;
+  padding-right: 0.5em;
   z-index: 100;
   transform: scale(1, 0);
   transform-origin: top center;
@@ -445,20 +448,33 @@ transform: scale(1, 0);
 .people-info {
   padding: 0 1em;
 }
+.people-info a {
+  color: #808080;
+  color: var(--text-color-2);
+}
 /**************************************************************/
 
 /*------------------------------------
             home header
 ------------------------------------*/
+@keyframes home-button {
+  100% {
+  
+    background: linear-gradient(
+      var(--gradian-color-1),
+      var(--gradian-color-3),
+      var(--gradian-color-1)
+    );
+  }
+}
 
-
-.home-header{
+.home-header {
   display: flex;
   justify-content: space-around;
 }
-.home-header a{
+.home-header a {
   position: relative;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   color: #808080;
   color: var(--text-color);
   text-decoration: none;
@@ -469,15 +485,16 @@ transform: scale(1, 0);
     var(--gradian-color-1),
     var(--gradian-color-3)
   );
+  animation: home-button 500ms ease-in 50ms 5  ;
 }
-.home-header a::after{
+.home-header a::after {
   position: absolute;
-right: .2em;
-  content: '>>';
+  right: 0.2em;
+  content: ">>";
   opacity: 0;
 }
 .home-header a:hover {
-  padding: .5em 1.5em .5em .5em;
+  padding: 0.5em 1.5em 0.5em 0.5em;
   background: #fff;
   background: linear-gradient(
     var(--gradian-color-1),
@@ -485,7 +502,7 @@ right: .2em;
     var(--gradian-color-1)
   );
 }
-.home-header a:hover::after{
+.home-header a:hover::after {
   opacity: 1;
 }
 /*-------------------------------------
@@ -602,7 +619,7 @@ right: .2em;
   display: flex;
   justify-content: center;
 }
-.pages-ellepsis{
+.pages-ellepsis {
   height: 2.5em;
   display: flex;
   flex-wrap: wrap;
@@ -847,7 +864,7 @@ img.loading {
 --------------------------------------*/
 .form-container {
   width: 90%;
-  min-height: 80vh;
+  min-height: 70vh;
   margin: 2em auto;
   display: flex;
   justify-content: space-around;
@@ -855,7 +872,7 @@ img.loading {
   flex-wrap: wrap-reverse;
   border-radius: 5px;
   box-shadow: 0 0 3px 3px var(--gradian-color-4) inset;
-  padding: .5em;
+  padding: 0.5em;
 }
 form.local-login {
   box-sizing: border-box;
@@ -868,25 +885,30 @@ form.local-login {
   margin: 1em 0;
 }
 
-.btn-social-login{
+.btn-social-login {
   display: block;
   width: 250px;
   padding: 0.5em;
   border-radius: 10px;
-  border: thin solid transparent;
+  border: none;
   text-decoration: none;
   margin-bottom: 1em;
-  background: #f0f0f0;
-  background: var(--text-color-2);
-  color: #fafafa;
-  color: var(--bg-container-color);
+  background: #e5e5e5;
+  background: linear-gradient(
+    var(--gradian-color-3),
+    var(--gradian-color-1),
+    var(--gradian-color-3)
+  );
+  color: #808080;
+  color: var(--text-color);
 }
-.btn-social-login:hover{
-  background: #fafafa;
-  background: var(--bg-container-color);
-  color: #191919;
-  color: var(--text-color-2);
-  border: thin solid;
+.btn-social-login:hover {
+  background: #fff;
+  background: linear-gradient(
+    var(--gradian-color-1),
+    var(--gradian-color-3),
+    var(--gradian-color-1)
+  );
 }
 .social-login img {
   vertical-align: middle;
@@ -896,7 +918,6 @@ form.local-login input {
   box-sizing: border-box;
   height: 3em;
   margin: 1em;
-  width: auto;
 }
 /*************************************************************/
 /*-------------------------------------
@@ -904,7 +925,7 @@ form.local-login input {
 --------------------------------------*/
 
 @media (max-width: 600px) {
-  a[name]{
+  a[name] {
     padding-top: 0;
     margin-top: 0;
     /* display: inline-block; required for webkit browsers */
@@ -914,32 +935,29 @@ form.local-login input {
     grid-template-rows: [header] auto [aside] auto [section] 1fr [footer] auto;
     grid-row-gap: 0;
   }
-   
- .aside{
+
+  .aside {
     grid-row: aside;
     grid-column: section;
     margin-bottom: 1em;
   }
-  
+
   .section-container {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    
-   
   }
   .section-container-aside {
     flex-wrap: nowrap;
     overflow: auto;
     width: 95vw;
     margin: 0 auto;
-   
   }
   .section-container-aside .movie {
-    margin: .2em .5em 0;
+    margin: 0.2em 0.5em 0;
   }
   .aside .movie-title,
   .aside .movie-year,
   .aside .movie-rating {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
   .section-container-aside .poster-container {
     width: 100px;
@@ -952,7 +970,6 @@ form.local-login input {
   .infos {
     grid-column: span 2;
   }
-  
 
   /* .nav-bare > ul > li > a{
     padding: .5em .3em ;
@@ -962,7 +979,7 @@ form.local-login input {
   /* .space, .nav-bare, form.search{
     flex: 0;
   } */
-  .menu ul{
+  .menu ul {
     max-height: 70vh;
     overflow: auto;
   }
