--- a/views/layout/general-layout/header.pug
+++ b/views/layout/general-layout/header.pug
@@ -44,12 +44,13 @@ header.header
                   span #{genre.count}
   //- .space
   .right  
-    if blackTheme == 1
-      a.theme(href='/theme?blackTheme=0')
+    if blackTheme != 1
+      a.theme(href='/theme?blackTheme=1')
         img(src="/static/images/sun.png")
     else
-      a.theme(href='/theme?blackTheme=1') 
+      a.theme(href='/theme?blackTheme=0') 
         img(src="/static/images/moon.png")    
+      
     if !authenticated
         a.login(href="/login#sect-hd") Login
         a.login(href="/register#sect-hd") Register
