fix comment bug

--- a/views/layout/movieById-layout/comments.pug
+++ b/views/layout/movieById-layout/comments.pug
@@ -5,11 +5,12 @@
         .user
           - var username = comment.user.username
           - var photo = comment.user.photo
+          - var userid = comment.user.userid
           if photo
             img(src=photo)
           else
             .user-first-letter #{username[0].toUpperCase()}
-        .user-creation Joined on: #{comment.commentedBy._id.getTimestamp().toLocaleDateString()}
+        .user-creation Joined on: #{userid.getTimestamp().toLocaleDateString()}
         .comment-header 
           span.username #{username}
           span.comment-date #{comment._id.getTimestamp().toLocaleString()}
