--- a/views/layout/general-layout/header.pug
+++ b/views/layout/general-layout/header.pug
@@ -50,7 +50,7 @@ header.header
     else
       a.theme(href='/theme?blackTheme=0') 
         img(src="/static/images/moon.png")    
-      
+    a.login(href="https://forms.gle/RFg1CBiJHiHUxexC9" target='_blanck') Contact
     if !authenticated
         a.login(href="/login#sect-hd") Login
         a.login(href="/register#sect-hd") Register
