removed fiverr native logo and replaced it with my own fiverr log

--- a/views/layout/general-layout/fiveer.pug
+++ b/views/layout/general-layout/fiveer.pug
@@ -1,10 +1,7 @@
 .fiveer
   a(itemprop='url' href='https://www.fiverr.com/yakhousam' rel='nofollow' target='_blank' style='display: inline-block;')
     .fiveer-container
-      .fiveer-star-container
-        each val in [0,1,2,3,4]
-          img(src="/static/images/icon-star.png")
       .fiveer-img-container
-        img.fiverr-profile-img(src='https://fiverr-res.cloudinary.com/t_profile_original,q_auto,f_auto/profile/photos/80344386/original/photo.jpg')
-        img.fiverr-icon(src='https://d2nb1f6l8b7ky0.cloudfront.net/fiverr_icon.png')
+        img.fiverr-stars(src='/static/images/star5.png')
+        img.fiverr-logo(src='/static/images/fiverr-logo.png')
       .fiveer-title Check out my Gigs
