--- a/views/layout/general-layout/layout.pug
+++ b/views/layout/general-layout/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
   head
-    
+    script(data-ad-client="ca-pub-9384812983846327" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
 
     meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
